--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+  <a href="https://github.com/matheuscamarques/tilemap/blob/master/index.html">GITHUB</a>
 </body>
 </html>
 <script>
